# light-c

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  模块说明.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data_dir.rs  lib.rs  模块说明.md
src-tauri/src/ai_models/: mft_discovery.rs  mod.rs  model_file_rules.rs  scanner.rs  types.rs
src-tauri/src/ai_models/detectors/: comfyui.rs  common.rs  huggingface.rs  lm_studio.rs  mod.rs  ollama.rs
src-tauri/src/cleaner/: delete_engine.rs  enhanced_delete.rs
src-tauri/src/commands/: ai_models.rs  data.rs  disk_growth.rs  hotspot.rs  mod.rs  verify.rs
src-tauri/src/disk_growth/: growth.rs  mft_scan.rs  mod.rs  snapshot.rs
src-tauri/src/scanner/: big_files.rs  categories.rs  file_info.rs  hotspot.rs  mod.rs  scan_engine.rs  social_scanner.rs
src-tauri/src/scanner/big_files_engine/: mft_bigfiles.rs  mft_core.rs
src-tauri/src/scanner/hotspot_engine/: engine_selector.rs  mft_scanner.rs
src-tauri/src/system_slim/: mod.rs
src/api/: commands.ts
src/components/: AnchorNav.tsx  ConfirmDialog.tsx  DashboardHeader.tsx  EmptyState.tsx  Footer.tsx  SettingsModal.tsx  UpdateModal.tsx
src/components/modules/: AiModelsModule.tsx  BigFilesModule.tsx  ContextMenuModule.tsx  DiskGrowthModule.tsx  DrillDownModal.tsx  HotspotModule.tsx  JunkCleanModule.tsx  LeftoversModule.tsx  RegistryModule.tsx  SocialCleanModule.tsx  SystemSlimModule.tsx  (+2 more)
src/config/: moduleMeta.ts  modules.ts
src/contexts/: DashboardContext.tsx  SettingsContext.tsx  index.ts
src/types/: index.ts
src/utils/: downloadConfig.ts
(+2 files in other folders)
