[package]
name = "LightC"
version = "2.9.1"
description = "Windows C盘智能清理工具"
authors = ["Evan Lau"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cleanup_c_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = { version = "2.9.0", features = ["native-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 文件系统操作
walkdir = "2"              # 递归遍历目录
jwalk = "0.8"              # 并行目录遍历（Win11 下缓存 metadata）
glob = "0.3"               # 通配符路径展开
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# Windows系统API
winapi = { version = "0.3", features = ["fileapi", "winbase", "handleapi", "errhandlingapi", "sysinfoapi", "processenv", "ioapiset", "winnt", "processthreadsapi", "securitybaseapi"] }
# Windows注册表操作
winreg = "0.55"
# 错误处理
thiserror = "1"
# 日志
log = "0.4"
env_logger = "0.11"
# 并行处理
rayon = "1.10"
num_cpus = "1.16"
tauri-plugin-process = "2.3.1"
dirs = "6.0.0"
# 单例模式
once_cell = "1.19"
# 回收站操作
trash = "5"
# 正则匹配（卸载残留包名/版本号过滤）
regex = "1"
